--- a/frontend/src/components/atoms/TextButton/textButton.scss
+++ b/frontend/src/components/atoms/TextButton/textButton.scss
@@ -28,7 +28,8 @@
   }
 
   &:disabled {
-    opacity: 0.55;
+    background: $bblGrey;
+    color: $darkGrey;
     pointer-events: none;
     cursor: not-allowed;
   }
