--- a/frontend/src/components/organisms/RaceTimesManager/raceTimesManager.scss
+++ b/frontend/src/components/organisms/RaceTimesManager/raceTimesManager.scss
@@ -4,6 +4,7 @@
     margin-bottom: 1.5rem;
   }
   &__table {
+    margin-bottom: 1.5rem;
     @include table;
   }
 
@@ -41,6 +42,21 @@
 
   .icon-button {
     display: inline-flex;
+  }
+
+  .spinning {
+    svg {
+      animation: spin 1s linear infinite;
+    }
+  }
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
 
