--- a/frontend/src/components/pages/Home/home.scss
+++ b/frontend/src/components/pages/Home/home.scss
@@ -1,6 +1,6 @@
 @import '../../../style.scss';
 
-.summary {
+.home {
   &__section {
     @include section;
   }
@@ -9,7 +9,17 @@
     @include container;
   }
 
-  &__button-wrapper {
-    padding: 1rem 0;
+    &__stat-blocks-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 1.5rem;
+    margin: 1.5rem 0;
+    
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      margin: 1rem 0;
+    }
   }
+
 }
