--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -7,7 +7,7 @@ $family-primary: 'Open Sans', sans-serif;
 $bblBlue: #341499;
 $phLogoBlue: #00B4FC;
 $phLogoRiver: #1E099C;
-$bblLogoBlu: #4169e1;
+$bblLogoBlue: #4169e1;
 $bblGrey: lightgrey;
 $darkGrey: #666666;
 $white: #fff;
@@ -25,6 +25,8 @@ $amber-tint: #FEFBEA;
 $amber-mid: #FFD230;
 $blue-tint: #EEF6FF;
 $grey-tint: #F9FAFB;
+$skeleton-base: #f3f4f6;
+$skeleton-highlight: #e5e7eb;
 
 $standard-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 
