--- a/frontend/src/components/pages/Logistics/logistics.scss
+++ b/frontend/src/components/pages/Logistics/logistics.scss
@@ -4,7 +4,12 @@
   &__section {
     @include section;
   }
+  
   &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
     @include container;
   }
 }
