--- a/frontend/src/components/pages/ResultIndex/resultIndex.scss
+++ b/frontend/src/components/pages/ResultIndex/resultIndex.scss
@@ -1,12 +1,57 @@
 @import '../../../style.scss';
 
 .result-index {
-    &__table-container {
-      overflow-x: auto;
-      margin-bottom: 1.5rem;
-    }
-  
-    &__table {
-      max-width: 100%;
+
+  &__section {
+    @include section;
+  }
+
+  &__container {
+    @include container;
+  }
+
+  &__title {
+    margin-bottom: 1.5rem;
+    @include h3;
+  }
+
+  &__title-section {
+    @include laptop {
+      @include grid(2);
     }
   }
+
+  &__table-container {
+    overflow-x: auto;
+  }
+
+  &__table {
+    width: 100%;
+    
+    @include table;
+  }
+
+  // &__stats {
+  //   display: flex;
+  //   align-items: center;
+  //   flex-wrap: wrap;
+  //   margin-bottom: 1.5rem;
+  // }
+
+  // &__stat {
+  //   padding: 1rem;
+  //   border-radius: $border-radius-small;
+  //   box-shadow: $standard-box-shadow;
+  // }
+
+    &__controls {
+      margin-bottom: 1.5rem;
+      @include tablet {
+        @include grid(2);
+      }
+
+      @include laptop {
+        @include grid(4);
+      }
+  }
+}
