feat: more fixes

--- a/frontend/src/components/organisms/CrewsTable/components/crewTimeEdit.scss
+++ b/frontend/src/components/organisms/CrewsTable/components/crewTimeEdit.scss
@@ -17,20 +17,41 @@
     @include table;
   }
 
+  &__form {
+    @include form-wider;
+  }
+
+  &__penalty-band {
+    @media screen and (min-width: $md) {
+      @include grid(2);
+    }
+  }
+
   &__control-wrapper {
     @include grid(4);
     margin-bottom: 1.5rem;
+  }
+
+  &__checkbox-group {
+    @media screen and (min-width: $md) {
+      @include grid(4);
+    }
   }
 
   &__time-inputs,
   &__box {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1.5rem;
   }
 
   &__field,
   &__box {
     margin-bottom: 1.5rem;
+  }
+
+  &__group-title {
+    color: $bblBlue;
+    font-size: 1.2em;
   }
 }
