--- a/frontend/src/components/organisms/MastersCrewsTable/mastersCrewsTable.scss
+++ b/frontend/src/components/organisms/MastersCrewsTable/mastersCrewsTable.scss
@@ -14,6 +14,7 @@
 
   &__table-container {
     overflow-x: auto;
+    margin: 1.5rem 0;
   }
 
   &__table {
@@ -27,12 +28,6 @@
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 1.5rem;
-  }
-
-  &__stat {
-    padding: 1rem;
-    border-radius: $border-radius-small;
-    box-shadow: $standard-box-shadow;
   }
 
   &__controls {
