--- a/frontend/src/components/pages/CrewManagementDashboard/crewManagementDashboard.scss
+++ b/frontend/src/components/pages/CrewManagementDashboard/crewManagementDashboard.scss
@@ -28,7 +28,7 @@
     max-width: 120px;
     button {
       color: $bblBlue;
-      padding: 0.5rem 1rem;
+      padding: 0.3rem;
       @include body-small;
     }
 
