--- a/frontend/src/components/molecules/Navbar/navbar.scss
+++ b/frontend/src/components/molecules/Navbar/navbar.scss
@@ -15,19 +15,7 @@
 
   &__login {
     margin-left: 0.5rem;
-    color: $bblBlue;
-    @include font-size(14);
+    @include animated-link;
 
-    @media (min-width: $lg) {
-      @include font-size(16);
-    }
-    
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  .c-data-loader {
-    margin-right: 0.5rem;
   }
 }
