--- a/frontend/src/components/organisms/MissingTimesTable/missingTimesTable.scss
+++ b/frontend/src/components/organisms/MissingTimesTable/missingTimesTable.scss
@@ -13,12 +13,17 @@
 
   &__table-container {
     overflow-x: auto;
+    margin: 1.5rem 0;
   }
 
   &__table {
     width: 100%;
     
     @include table;
+  }
+
+  &__cell--id {
+    @include animated-link;
   }
 
   &__stats {
@@ -32,6 +37,8 @@
     padding: 1rem;
     border-radius: $border-radius-small;
     box-shadow: $standard-box-shadow;
+
+    @include body-small;
   }
 
     &__controls {
