--- a/frontend/src/components/organisms/RaceTimesTable/raceTimesTable.scss
+++ b/frontend/src/components/organisms/RaceTimesTable/raceTimesTable.scss
@@ -2,12 +2,19 @@
 @import '../../../lib.scss';
 
 .race-times-table {
+
+  &__title {
+    margin-bottom: 1.5rem;
+    @include h3;
+  }
+
   &__table-container {
     overflow-x: auto;
   }
 
   &__table-container {
     overflow-x: auto;
+    margin: 1.5rem 0;
   }
 
   &__table {
@@ -16,26 +23,37 @@
     @include table;
   }
 
-  &__stats {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 1.5rem;
-  }
-
-  &__stat {
-    padding: 1rem;
-    border-radius: $border-radius-small;
-    box-shadow: $standard-box-shadow;
-  }
-
-    &__controls {
+  &__controls {
     @include tablet {
       @include grid(2);
     }
 
     @include laptop {
       @include grid(4);
+    }
+  }
+
+  &__sequence-link {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    text-decoration: none;
+    
+    &:hover {
+      .race-times-table__cell--sequence {
+        color: #007bff; /* or your primary color */
+        text-decoration: underline;
+      }
+    }
+    
+    &:focus {
+      outline: 2px solid #007bff;
+      outline-offset: 2px;
+      border-radius: 2px;
     }
   }
 
