--- a/frontend/src/components/pages/ExportData/exportData.scss
+++ b/frontend/src/components/pages/ExportData/exportData.scss
@@ -1,14 +1,14 @@
-@import '../../../style.scss';
+@import "../../../style.scss";
 
 .data-exports {
   &__title {
-      margin-bottom: 1rem;
-      color: $bblBlue;
-      @include h3;
+    margin-bottom: 1rem;
+    color: $bblBlue;
+    @include h3;
   }
 
   &__description {
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     @include body;
   }
 
