--- a/frontend/src/components/pages/ResultIndex/resultIndex.scss
+++ b/frontend/src/components/pages/ResultIndex/resultIndex.scss
@@ -41,6 +41,11 @@
     }
   }
 
+  &__count {
+    margin-bottom: 1rem;
+    @include body-small;
+  }
+
   &__control {
     &--flags {
       display: flex;
