--- a/frontend/src/components/organisms/EventMeetingKeyManager/eventMeetingKeyManager.scss
+++ b/frontend/src/components/organisms/EventMeetingKeyManager/eventMeetingKeyManager.scss
@@ -1,24 +1,22 @@
-@import '../../../style.scss';
+@import "../../../style.scss";
 
 .event-meeting-manager {
   padding: 1.5rem;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 
-  &__title {
-    margin-bottom: 0.5rem;
+  &__header-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
+  &__title {
     @include h2;
   }
 
   &__description {
     margin-bottom: 0.5rem;
-  }
-
-  &__actions {
-    display: flex;
-    gap: 0.5rem;
-    margin: 1.5rem 0;
   }
 
   &__table {
