--- a/frontend/src/components/pages/ContactDetailReport/contactDetailReport.scss
+++ b/frontend/src/components/pages/ContactDetailReport/contactDetailReport.scss
@@ -1,13 +1,22 @@
-@import '../../../style.scss';
+@import "../../../style.scss";
 
 .contact-detail-report {
+  &__section {
+    @include section;
+  }
+
+  &__container {
+    @include container;
+  }
+
   &__table-container {
-      overflow-x: auto;
+    overflow-x: auto;
   }
 
   &__table {
     max-width: 100%;
     margin-left: 0;
+    @include table;
   }
 
   &__title {
