fix the calculate start order page to work with pagination

--- a/frontend/src/components/organisms/CrewStartOrderTable/crewStartOrderTable.scss
+++ b/frontend/src/components/organisms/CrewStartOrderTable/crewStartOrderTable.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  .table-pagination {
+    padding: 1.5rem 0;
+  }
+
   // Add these styles to your existing crewStartOrderTable.scss file
 
   &__header {
