--- a/frontend/src/components/pages/ReportsAndDataExports/reportsAndDataExports.scss
+++ b/frontend/src/components/pages/ReportsAndDataExports/reportsAndDataExports.scss
@@ -1,6 +1,6 @@
 @import "../../../style.scss";
 
-.data-exports {
+.reports-data-exports {
   &__title {
     margin-bottom: 1rem;
     color: $bblBlue;
@@ -18,6 +18,16 @@
 
   &__container {
     @include container;
+  }
+
+  &__grid {
+    @include grid(1);
+    @include tablet {
+      @include grid(2);
+    }
+    @include wide {
+      @include grid(4);
+    }
   }
 
   &__columns {
