fix: fix start order to flag accepted crews with start order 999999

--- a/frontend/src/components/organisms/CrewStartOrderTable/crewStartOrderTable.scss
+++ b/frontend/src/components/organisms/CrewStartOrderTable/crewStartOrderTable.scss
@@ -53,6 +53,10 @@
     }
   }
 
+  &__duplicate-summary {
+    margin-top: 0.5rem;
+  }
+
   &__duplicate-detail {
     margin-top: 0.25rem;
     font-size: 0.875rem;
